testdata/baselines/reference/submodule/compiler/typeParametersShouldNotBeEqual2.errors.txt
typeParametersShouldNotBeEqual2.ts(4,5): error TS2322: Type 'U' is not assignable to type 'T'.
typeParametersShouldNotBeEqual2.ts(5,5): error TS2322: Type 'V' is not assignable to type 'T'.
typeParametersShouldNotBeEqual2.ts(6,5): error TS2322: Type 'T' is not assignable to type 'V'.
typeParametersShouldNotBeEqual2.ts(7,5): error TS2322: Type 'V' is not assignable to type 'U'.
typeParametersShouldNotBeEqual2.ts(8,5): error TS2322: Type 'U' is not assignable to type 'V'.
typeParametersShouldNotBeEqual2.ts(9,5): error TS2322: Type 'Object' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'Object'.


==== typeParametersShouldNotBeEqual2.ts (6 errors) ====
    function ff<T extends Date, U extends Date, V>(x: T, y: U, z: V) {
        var zz!: Object;
        x = x;  // Ok
        x = y;  // Ok
        ~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
        x = z;  // Error
        ~
!!! error TS2322: Type 'V' is not assignable to type 'T'.
!!! related TS2208 typeParametersShouldNotBeEqual2.ts:1:45: This type parameter might need an `extends T` constraint.
        z = x;  // Error
        ~
!!! error TS2322: Type 'T' is not assignable to type 'V'.
        y = z;  // Error
        ~
!!! error TS2322: Type 'V' is not assignable to type 'U'.
!!! related TS2208 typeParametersShouldNotBeEqual2.ts:1:45: This type parameter might need an `extends U` constraint.
        z = y;  // Error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'V'.
        x = zz;  // Error
        ~
!!! error TS2322: Type 'Object' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'Object'.
        zz = x;  // Ok
    }
    